src/tabs.scss
@import './colours.scss';
@import './components/Button/Button.scss';

#app, #wc {
  .react-tabs {
    flex: 1;
    display: flex;
    flex-flow: column;
    overflow: hidden;
    position: relative;
    border-radius: 10px;

    &__tab-inner {
      @extend .btn;
      @extend .btn--small;
      @extend .btn--secondary;

      border: 3px solid transparent;
      margin: var(--space-0-5) var(--space-0-25);
      padding: var(--space-0-25) var(--space-0-5);
      white-space: nowrap;

      &--split {
        padding-right: var(--space-2-5);
      }
    }
    &__tab-inner-close-btn {
      position: absolute;
      background: transparent;
      right: calc(-1 * var(--space-0-5));
      height: 100%;
      padding: var(--space-0-5) var(--space-1) var(--space-0-5) var(--space-0-25);
      text-align: center;
      svg {
        margin: 0;
      }
      &:focus-visible {
        border: 0;

        svg {
          border: 3px solid $rpf-brand-raspberry;
        }
      }
    }

    &__tab {
      border: none;
      background-color: transparent;
      padding: 0;
      margin: 0;

      &--selected {
        border-radius: 0;

        .react-tabs__tab-inner {
          border: 3px solid $rpf-teal-shade-20;
        }
      }

      &:hover {
        .react-tabs__tab-inner {
          background-color: $rpi-grey-40;
        }
      }

      &:focus {
        box-shadow: none;
      }

      &:focus-visible {
        outline: none;

        .react-tabs__tab-inner {
          border: 3px solid $rpf-brand-raspberry;
        }
      }
  
      &:focus:after {
        display: none;
      }

      &:first-of-type {
        .react-tabs__tab-inner {
          margin-left: var(--space-0-5);
        }
      }

      &:last-of-type {
        .react-tabs__tab-inner {
          margin-right: var(--space-0-5);
        }
      }
    }

    &__tab-container {
      display: flex;
      height: 50px;
    }
  
    &__tab-list {
      border-bottom: none;
      display: flex;
      overflow-x: auto;
      overflow-y: hidden;
      margin: 0;
    }
  
    &__tab-panel--selected {
      flex: 1;
      display: flex;
      flex-flow: column;
    }
  }

  &.--light {
    .react-tabs {
  
      &__tab-container {
        border-bottom: 1px solid $rpf-darkmode-grey85;
      }
  
      &__tab {
        &--selected {
          .react-tabs__tab-inner {
            background-color: $rpi-grey-5;
          }
        }
      }
    }
  }

  &.--dark {
    .react-tabs {
      background-color: $rpf-darkmode-grey18;
  
      &__tab-container {
        border-bottom: 1px solid $rpf-darkmode-grey42;
      }
  
      &__tab {
        &:hover {
          .react-tabs__tab-inner {
            background-color: $rpf-darkmode-grey22;
          }
        }
  
        &--selected {
          color: $rpf-white;

          .react-tabs__tab-inner {
            color: inherit;
            background-color: $rpf-darkmode-grey42;
          }
        }
      }

      &__tab-inner {
        background-color: $rpf-darkmode-grey32;
        color: $rpf-white;
        svg {
          fill: $rpf-white;
        }
      }
    }
  }
}

